# auto_tweet

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  main.py  model.py  sender.py  utils.py
src/router/: __init__.py  tweet.py
